Improve POM